Replace api overview and authentication with open api description
